[gd_scene load_steps=6 format=3 uid="uid://c1cow4bdg8cnn"]

[ext_resource type="Script" path="res://1_scenes/6_ui/2_screens/game_completed_screen.gd" id="1_udt21"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aigob"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_054iw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gj5v8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8clog"]

[node name="GameCompletedScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_udt21")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.105882, 0.227451, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -174.0
offset_right = 245.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 80
text = "Game is completed!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -49.0
offset_right = 108.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="FinalScore" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 48
text = "Total score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalTime" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 48
text = "Total time: 0:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme_override_colors/font_hover_color = Color(0.807843, 0.658824, 0.890196, 1)
theme_override_colors/font_pressed_color = Color(0.857578, 0.742602, 0.920312, 1)
theme_override_colors/font_focus_color = Color(0.6, 0.368627, 0.713726, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_aigob")
theme_override_styles/hover = SubResource("StyleBoxEmpty_054iw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gj5v8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8clog")
text = "Return to main menu"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../MainMenuButton")
theme_override_colors/font_hover_color = Color(0.807843, 0.658824, 0.890196, 1)
theme_override_colors/font_pressed_color = Color(0.857578, 0.742602, 0.920312, 1)
theme_override_colors/font_focus_color = Color(0.6, 0.368627, 0.713726, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxEmpty_aigob")
theme_override_styles/hover = SubResource("StyleBoxEmpty_054iw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_gj5v8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8clog")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
